<resources>

    <string name="enter_room">Вход в личный кабинет</string>
    <string name="find_work">Поиск работы</string>
    <string name="login">Login</string>
    <string name="resume">Продолжить</string>
    <string name="enter_in_password">Войти с паролем</string>
    <string name="search_personal">Я ищу сотрудников</string>
    <string name="vacancy_text">Размещение вакансий и доступ к базе резюме</string>
    <string name="search_text">Поиск сотрудников</string>
    <string name="example_mail_ru">Отправили код на example@mail.ru</string>
    <string name="text_text">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="hint_star">*</string>
    <string name="next">Продолжить</string>
</resources>