<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".ConfirmationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/example_mail_ru"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/text_text"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include layout="@layout/item_edit" />

        <include layout="@layout/item_edit" />

        <include layout="@layout/item_edit" />

        <include layout="@layout/item_edit" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next_find_offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/text_blue_color"
        android:text="@string/next"
        app:cornerRadius="8dp" />
</LinearLayout>